fix: minor issue caught at QG (#101)